Fix hamburger menu visibility - change display from none to block

--- a/static/css/mobile-telegram.css
+++ b/static/css/mobile-telegram.css
@@ -84,7 +84,7 @@
 
 /* Side Menu (Settings) */
 .side-menu {
-    display: none;
+    display: block;
     position: fixed;
     top: 0;
     left: -320px;
